[gd_scene load_steps=16 format=3 uid="uid://dwdsyyxdgdfmc"]

[ext_resource type="Texture2D" uid="uid://d3iw6xcdruvst" path="res://sourceModels/galaxyCorridorDoors_galaxycorridor.png" id="1_4mqmk"]
[ext_resource type="Script" path="res://scenes/interactables/door.gd" id="1_gqq2y"]
[ext_resource type="PackedScene" uid="uid://t00ex1g7rigp" path="res://scenes/interactables/click_interaction.tscn" id="2_leu1g"]
[ext_resource type="Script" path="res://scenes/interactables/door_lerp_anim.gd" id="2_lo6gr"]
[ext_resource type="Material" uid="uid://dwnwniuhvtw35" path="res://materials/psx_model.tres" id="4_wlin6"]

[sub_resource type="Curve" id="Curve_7lrru"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bu6q4"]
resource_name = "Material.001"
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_4mqmk")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_ce7tr"]
_surfaces = [{
"aabb": AABB(-0.786891, 0, -0.0301419, 0.786901, 2.28302, 0.0602908),
"format": 4097,
"index_count": 36,
"index_data": PackedByteArray(3, 0, 7, 0, 0, 0, 3, 0, 6, 0, 7, 0, 0, 0, 4, 0, 3, 0, 0, 0, 1, 0, 4, 0, 2, 0, 6, 0, 5, 0, 2, 0, 7, 0, 6, 0, 1, 0, 7, 0, 2, 0, 1, 0, 0, 0, 7, 0, 3, 0, 5, 0, 6, 0, 3, 0, 4, 0, 5, 0, 1, 0, 5, 0, 4, 0, 1, 0, 2, 0, 5, 0),
"name": "Material.001",
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 128, 178, 0, 0, 0, 0, 64, 236, 246, 188, 176, 113, 73, 191, 0, 0, 0, 0, 64, 236, 246, 188, 176, 113, 73, 191, 247, 28, 18, 64, 64, 236, 246, 188, 0, 0, 128, 178, 0, 0, 0, 0, 160, 250, 246, 60, 176, 113, 73, 191, 0, 0, 0, 0, 160, 250, 246, 60, 176, 113, 73, 191, 247, 28, 18, 64, 160, 250, 246, 60, 0, 0, 128, 178, 247, 28, 18, 64, 160, 250, 246, 60, 0, 0, 128, 178, 247, 28, 18, 64, 64, 236, 246, 188)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_7huhe"]
resource_name = "galaxyCorridorDoors_Plane_003"
_surfaces = [{
"aabb": AABB(-0.786891, 0, -0.0301419, 0.786901, 2.28302, 0.0602908),
"attribute_data": PackedByteArray(126, 128, 32, 63, 128, 164, 199, 62, 126, 128, 32, 63, 128, 164, 199, 62, 201, 149, 71, 63, 88, 70, 108, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 0, 129, 251, 59, 48, 14, 63, 63, 0, 129, 251, 59, 48, 14, 63, 63, 0, 129, 251, 59, 126, 128, 32, 63, 128, 164, 199, 62, 126, 128, 32, 63, 128, 164, 199, 62, 219, 141, 67, 63, 88, 70, 108, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 128, 164, 199, 62, 48, 14, 63, 63, 0, 129, 251, 59, 48, 14, 63, 63, 0, 129, 251, 59, 48, 14, 63, 63, 0, 129, 251, 59, 126, 128, 32, 63, 0, 129, 251, 59, 126, 128, 32, 63, 0, 129, 251, 59, 219, 141, 67, 63, 160, 161, 198, 60, 126, 128, 32, 63, 0, 129, 251, 59, 126, 128, 32, 63, 0, 129, 251, 59, 201, 149, 71, 63, 160, 161, 198, 60),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(11, 0, 23, 0, 2, 0, 11, 0, 20, 0, 23, 0, 0, 0, 13, 0, 9, 0, 0, 0, 4, 0, 13, 0, 8, 0, 19, 0, 17, 0, 8, 0, 22, 0, 19, 0, 5, 0, 21, 0, 7, 0, 5, 0, 1, 0, 21, 0, 10, 0, 16, 0, 18, 0, 10, 0, 14, 0, 16, 0, 3, 0, 15, 0, 12, 0, 3, 0, 6, 0, 15, 0),
"material": SubResource("StandardMaterial3D_bu6q4"),
"name": "Material.001",
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 128, 178, 0, 0, 0, 0, 64, 236, 246, 188, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 178, 0, 0, 0, 0, 64, 236, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 178, 0, 0, 0, 0, 64, 236, 246, 188, 255, 255, 255, 127, 255, 255, 255, 255, 176, 113, 73, 191, 0, 0, 0, 0, 64, 236, 246, 188, 0, 0, 255, 127, 255, 255, 255, 191, 176, 113, 73, 191, 0, 0, 0, 0, 64, 236, 246, 188, 255, 127, 0, 0, 255, 255, 255, 191, 176, 113, 73, 191, 0, 0, 0, 0, 64, 236, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 176, 113, 73, 191, 247, 28, 18, 64, 64, 236, 246, 188, 0, 0, 255, 127, 255, 255, 255, 191, 176, 113, 73, 191, 247, 28, 18, 64, 64, 236, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 176, 113, 73, 191, 247, 28, 18, 64, 64, 236, 246, 188, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 178, 0, 0, 0, 0, 160, 250, 246, 60, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 128, 178, 0, 0, 0, 0, 160, 250, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 128, 178, 0, 0, 0, 0, 160, 250, 246, 60, 255, 255, 255, 127, 255, 255, 255, 255, 176, 113, 73, 191, 0, 0, 0, 0, 160, 250, 246, 60, 0, 0, 255, 127, 255, 255, 255, 191, 176, 113, 73, 191, 0, 0, 0, 0, 160, 250, 246, 60, 255, 127, 0, 0, 255, 255, 255, 191, 176, 113, 73, 191, 0, 0, 0, 0, 160, 250, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 176, 113, 73, 191, 247, 28, 18, 64, 160, 250, 246, 60, 0, 0, 255, 127, 255, 255, 255, 191, 176, 113, 73, 191, 247, 28, 18, 64, 160, 250, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 176, 113, 73, 191, 247, 28, 18, 64, 160, 250, 246, 60, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 178, 247, 28, 18, 64, 160, 250, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 128, 178, 247, 28, 18, 64, 160, 250, 246, 60, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 178, 247, 28, 18, 64, 160, 250, 246, 60, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 128, 178, 247, 28, 18, 64, 64, 236, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 128, 178, 247, 28, 18, 64, 64, 236, 246, 188, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 128, 178, 247, 28, 18, 64, 64, 236, 246, 188, 255, 255, 255, 127, 255, 255, 255, 255)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ce7tr")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_adei5"]
points = PackedVector3Array(-0.786891, 0, -0.0301419, -0.786891, 0, 0.0301488, -0.786891, 2.28302, -0.0301419, 0, 0, -0.0301419, 0, 0, 0.0301488, -0.786891, 2.28302, 0.0301488, 0, 2.28302, -0.0301419, 0, 2.28302, 0.0301488)

[sub_resource type="ArrayMesh" id="ArrayMesh_mf8p7"]
_surfaces = [{
"aabb": AABB(5.07743e-09, 0, -0.0301491, 0.786891, 2.28302, 0.060301),
"format": 4097,
"index_count": 36,
"index_data": PackedByteArray(3, 0, 7, 0, 0, 0, 3, 0, 6, 0, 7, 0, 0, 0, 4, 0, 3, 0, 0, 0, 1, 0, 4, 0, 2, 0, 6, 0, 5, 0, 2, 0, 7, 0, 6, 0, 1, 0, 7, 0, 2, 0, 1, 0, 0, 0, 7, 0, 3, 0, 5, 0, 6, 0, 3, 0, 4, 0, 5, 0, 1, 0, 5, 0, 4, 0, 1, 0, 2, 0, 5, 0),
"name": "Material.001",
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(178, 93, 212, 50, 0, 0, 0, 0, 64, 236, 246, 60, 176, 113, 73, 63, 0, 0, 0, 0, 182, 235, 246, 60, 176, 113, 73, 63, 247, 28, 18, 64, 182, 235, 246, 60, 148, 117, 174, 49, 0, 0, 0, 0, 160, 250, 246, 188, 176, 113, 73, 63, 0, 0, 0, 0, 42, 251, 246, 188, 176, 113, 73, 63, 247, 28, 18, 64, 42, 251, 246, 188, 148, 117, 174, 49, 247, 28, 18, 64, 160, 250, 246, 188, 178, 93, 212, 50, 247, 28, 18, 64, 64, 236, 246, 60)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_000ny"]
resource_name = "galaxyCorridorDoors_Plane_004"
_surfaces = [{
"aabb": AABB(5.07743e-09, 0, -0.0301491, 0.786891, 2.28302, 0.060301),
"attribute_data": PackedByteArray(222, 16, 72, 63, 88, 88, 111, 62, 126, 128, 32, 63, 128, 164, 199, 62, 126, 128, 32, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 0, 129, 251, 59, 196, 240, 1, 63, 0, 129, 251, 59, 196, 240, 1, 63, 0, 129, 251, 59, 190, 77, 67, 63, 88, 88, 111, 62, 126, 128, 32, 63, 128, 164, 199, 62, 126, 128, 32, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 128, 164, 199, 62, 196, 240, 1, 63, 0, 129, 251, 59, 196, 240, 1, 63, 0, 129, 251, 59, 196, 240, 1, 63, 0, 129, 251, 59, 190, 77, 67, 63, 192, 36, 177, 60, 126, 128, 32, 63, 0, 129, 251, 59, 126, 128, 32, 63, 0, 129, 251, 59, 222, 16, 72, 63, 192, 36, 177, 60, 126, 128, 32, 63, 0, 129, 251, 59, 126, 128, 32, 63, 0, 129, 251, 59),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(9, 0, 21, 0, 0, 0, 9, 0, 18, 0, 21, 0, 1, 0, 12, 0, 10, 0, 1, 0, 3, 0, 12, 0, 7, 0, 20, 0, 16, 0, 7, 0, 23, 0, 20, 0, 4, 0, 22, 0, 6, 0, 4, 0, 2, 0, 22, 0, 11, 0, 15, 0, 19, 0, 11, 0, 13, 0, 15, 0, 5, 0, 17, 0, 14, 0, 5, 0, 8, 0, 17, 0),
"material": SubResource("StandardMaterial3D_bu6q4"),
"name": "Material.001",
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(178, 93, 212, 50, 0, 0, 0, 0, 64, 236, 246, 60, 0, 0, 255, 127, 255, 127, 255, 191, 178, 93, 212, 50, 0, 0, 0, 0, 64, 236, 246, 60, 255, 127, 0, 0, 255, 255, 255, 191, 178, 93, 212, 50, 0, 0, 0, 0, 64, 236, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 176, 113, 73, 63, 0, 0, 0, 0, 182, 235, 246, 60, 255, 127, 0, 0, 255, 255, 255, 191, 176, 113, 73, 63, 0, 0, 0, 0, 182, 235, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 176, 113, 73, 63, 0, 0, 0, 0, 182, 235, 246, 60, 255, 255, 255, 127, 255, 255, 255, 191, 176, 113, 73, 63, 247, 28, 18, 64, 182, 235, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 176, 113, 73, 63, 247, 28, 18, 64, 182, 235, 246, 60, 255, 127, 255, 255, 255, 255, 255, 191, 176, 113, 73, 63, 247, 28, 18, 64, 182, 235, 246, 60, 255, 255, 255, 127, 255, 255, 255, 191, 148, 117, 174, 49, 0, 0, 0, 0, 160, 250, 246, 188, 0, 0, 255, 127, 255, 127, 255, 191, 148, 117, 174, 49, 0, 0, 0, 0, 160, 250, 246, 188, 255, 127, 0, 0, 255, 255, 255, 191, 148, 117, 174, 49, 0, 0, 0, 0, 160, 250, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 176, 113, 73, 63, 0, 0, 0, 0, 42, 251, 246, 188, 255, 127, 0, 0, 255, 255, 255, 191, 176, 113, 73, 63, 0, 0, 0, 0, 42, 251, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 176, 113, 73, 63, 0, 0, 0, 0, 42, 251, 246, 188, 255, 255, 255, 127, 255, 255, 255, 191, 176, 113, 73, 63, 247, 28, 18, 64, 42, 251, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 176, 113, 73, 63, 247, 28, 18, 64, 42, 251, 246, 188, 255, 127, 255, 255, 255, 255, 255, 191, 176, 113, 73, 63, 247, 28, 18, 64, 42, 251, 246, 188, 255, 255, 255, 127, 255, 255, 255, 191, 148, 117, 174, 49, 247, 28, 18, 64, 160, 250, 246, 188, 0, 0, 255, 127, 255, 127, 255, 191, 148, 117, 174, 49, 247, 28, 18, 64, 160, 250, 246, 188, 255, 255, 255, 255, 0, 0, 255, 191, 148, 117, 174, 49, 247, 28, 18, 64, 160, 250, 246, 188, 255, 127, 255, 255, 255, 255, 255, 191, 178, 93, 212, 50, 247, 28, 18, 64, 64, 236, 246, 60, 0, 0, 255, 127, 255, 127, 255, 191, 178, 93, 212, 50, 247, 28, 18, 64, 64, 236, 246, 60, 255, 127, 255, 127, 0, 0, 255, 63, 178, 93, 212, 50, 247, 28, 18, 64, 64, 236, 246, 60, 255, 127, 255, 255, 255, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_mf8p7")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jng40"]
points = PackedVector3Array(5.07743e-09, 0, -0.0301491, 5.07743e-09, 0, 0.0301419, 5.07743e-09, 2.28302, -0.0301491, 0.786891, 0, -0.0301491, 0.786891, 0, 0.030136, 5.07743e-09, 2.28302, 0.0301419, 0.786891, 2.28302, -0.0301491, 0.786891, 2.28302, 0.030136)

[sub_resource type="BoxShape3D" id="BoxShape3D_tbc1i"]
size = Vector3(1.5, 2, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_so2xl"]
size = Vector3(1.25, 2, 0.25)

[node name="galaxyCorridorDoors" type="Node3D"]
script = ExtResource("1_gqq2y")
autoOpen = true

[node name="Doors" type="Node3D" parent="."]
script = ExtResource("2_lo6gr")
lerp_curve = SubResource("Curve_7lrru")

[node name="DoorA" type="MeshInstance3D" parent="Doors"]
mesh = SubResource("ArrayMesh_7huhe")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_wlin6")

[node name="AnimatableBody3D" type="StaticBody3D" parent="Doors/DoorA"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Doors/DoorA/AnimatableBody3D"]
shape = SubResource("ConvexPolygonShape3D_adei5")

[node name="DoorAOpen" type="Node3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0)

[node name="DoorB" type="MeshInstance3D" parent="Doors"]
mesh = SubResource("ArrayMesh_000ny")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_wlin6")

[node name="AnimatableBody3D" type="StaticBody3D" parent="Doors/DoorB"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Doors/DoorB/AnimatableBody3D"]
shape = SubResource("ConvexPolygonShape3D_jng40")

[node name="DoorBOpen" type="Node3D" parent="Doors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21298, 0)
shape = SubResource("BoxShape3D_tbc1i")

[node name="ClickInteraction" parent="." instance=ExtResource("2_leu1g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18315, 0)

[node name="CollisionShape3D" parent="ClickInteraction" index="0"]
shape = SubResource("BoxShape3D_so2xl")

[connection signal="on_close_door" from="." to="Doors" method="set_closed"]
[connection signal="on_open_door" from="." to="Doors" method="set_open"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="on_interact" from="ClickInteraction" to="." method="toggle_open"]

[editable path="ClickInteraction"]
